tests/parse_errors/undefvar.bkl
<?xml version="1.0" ?>
<makefile>
    <set var="FOO">x $(BAR) y</set>
</makefile>
